Fix height of horizontal scrollbars

--- a/page/src/App.css
+++ b/page/src/App.css
@@ -30,6 +30,7 @@ h1 {
 
 ::-webkit-scrollbar {
     width: 14px;
+    height: 14px;
 }
 
 /* Track */
